--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NODE_ENV=development
 PORT=8082
-MONGODB_URL=mongodb://127.0.0.1:27017/qkart
+MONGODB_URL=mongodb+srv://LordTejas:Tejas_5225@qkart-backend.yihipyg.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET=thisisasamplesecret
 JWT_ACCESS_EXPIRATION_MINUTES=240
 JWT_REFRESH_EXPIRATION_DAYS=30
